--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>VIITOR</title>
-   <link rel="stylesheet" type="text/css" href="stil.css">
+   <link rel="stylesheet" type="text/css" href="site.css">
 </head>
 <body>
     <h1 style="text-align: center; font-size: 2cm;">Planuri până la 30 de ani</h1>
